[gd_scene load_steps=23 format=3 uid="uid://7577ojhb4roh"]

[ext_resource type="Script" path="res://scripts/Game/UI/KillCounter.gd" id="1_3q7ul"]
[ext_resource type="Texture2D" uid="uid://ceolwevbtxs1v" path="res://assets/Images/crosshair.svg" id="2_hfkky"]
[ext_resource type="Script" path="res://scripts/Game/UI/FadingLabel.gd" id="3_8xt3j"]
[ext_resource type="Script" path="res://scripts/Game/UI/HpHUD.gd" id="4_nh7lt"]
[ext_resource type="Texture2D" uid="uid://c25165w7veoxw" path="res://assets/Images/bar_empty.png" id="5_2mj7k"]
[ext_resource type="Texture2D" uid="uid://103b8b0j14pe" path="res://assets/Images/bar_full.png" id="6_7cw73"]
[ext_resource type="Script" path="res://scripts/Game/UI/XpHUD.gd" id="7_piybi"]
[ext_resource type="Texture2D" uid="uid://dq1l2frus8vso" path="res://assets/Images/thin_bar_empty.png" id="8_seq44"]
[ext_resource type="Texture2D" uid="uid://dbfxb3ylvvb3l" path="res://assets/Images/thin_bar_full.png" id="9_mq6sk"]
[ext_resource type="Script" path="res://scripts/Game/UI/WaveInfo.gd" id="10_qlxkb"]
[ext_resource type="Script" path="res://scripts/Game/Player/Skills/SkillPanel.gd" id="11_6royk"]
[ext_resource type="Script" path="res://scripts/Game/Player/Skills/DamageSkill.gd" id="12_5wmp4"]
[ext_resource type="Script" path="res://scripts/Game/Player/Skills/MaxHpSkill.gd" id="13_ojypw"]
[ext_resource type="PackedScene" uid="uid://csebtmqdqdua1" path="res://scenes/Game/Player/Player.tscn" id="14_5x4e5"]
[ext_resource type="PackedScene" uid="uid://eyx5u2pixgul" path="res://scenes/Game/Enemy/Shiteyanyo.tscn" id="17_ie47u"]
[ext_resource type="PackedScene" uid="uid://ddg4hfiawrh0w" path="res://scenes/Game/Enemy/Eye.tscn" id="18_rcyc4"]
[ext_resource type="Script" path="res://scripts/Game/Enemy/EnemySpawner.gd" id="22_di2is"]
[ext_resource type="PackedScene" uid="uid://rdihksl83wam" path="res://scenes/Game/Map.tscn" id="24_qfglw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_172k2"]
bg_color = Color(0.235294, 0.235294, 0.235294, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_iarg5"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_fcnkc"]
sky_material = SubResource("ProceduralSkyMaterial_iarg5")

[sub_resource type="Environment" id="Environment_b8hfi"]
background_mode = 2
sky = SubResource("Sky_fcnkc")
tonemap_mode = 2
glow_enabled = true

[node name="Game" type="Node3D"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="KillCounter" type="Label" parent="UI"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -386.0
offset_right = 55.0
offset_bottom = -338.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
script = ExtResource("1_3q7ul")

[node name="Crosshair" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2, 2)
texture = ExtResource("2_hfkky")
expand_mode = 1

[node name="DamageLabel" type="Label" parent="UI"]
self_modulate = Color(0.627451, 1, 0.627451, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 270.0
offset_right = 80.0
offset_bottom = 318.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
script = ExtResource("3_8xt3j")

[node name="HpHUD" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -52.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_nh7lt")

[node name="HpBar" type="TextureProgressBar" parent="UI/HpHUD"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -20.0
offset_right = 276.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_under = ExtResource("5_2mj7k")
texture_progress = ExtResource("6_7cw73")

[node name="HpLabel" type="Label" parent="UI/HpHUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -29.0
offset_right = 34.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "100"
horizontal_alignment = 1

[node name="XpHUD" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -92.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_piybi")

[node name="XpBar" type="TextureProgressBar" parent="UI/XpHUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -266.0
offset_top = -23.0
offset_right = 266.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.001
texture_under = ExtResource("8_seq44")
texture_progress = ExtResource("9_mq6sk")

[node name="XpLabel" type="Label" parent="UI/XpHUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -36.0
offset_right = 35.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.784314, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0
"
horizontal_alignment = 1

[node name="WaveInfo" type="Label" parent="UI"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 126.0
offset_bottom = 64.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Wave 1"
script = ExtResource("10_qlxkb")

[node name="SkillPanel" type="PanelContainer" parent="UI"]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_172k2")
script = ExtResource("11_6royk")
metadata/_edit_use_anchors_ = true

[node name="TabContainer" type="TabContainer" parent="UI/SkillPanel"]
layout_mode = 2

[node name="Offense" type="Panel" parent="UI/SkillPanel/TabContainer"]
layout_mode = 2

[node name="Damage" type="Button" parent="UI/SkillPanel/TabContainer/Offense"]
layout_mode = 1
offset_left = 160.0
offset_top = 160.0
offset_right = 210.0
offset_bottom = 237.0
tooltip_text = "+5% Overall Damage per Level"
text = "DMG
LVL 0
+0%"
script = ExtResource("12_5wmp4")

[node name="Defense" type="Panel" parent="UI/SkillPanel/TabContainer"]
visible = false
layout_mode = 2

[node name="MaxHp" type="Button" parent="UI/SkillPanel/TabContainer/Defense"]
layout_mode = 1
offset_left = 160.0
offset_top = 191.0
offset_right = 210.0
offset_bottom = 268.0
tooltip_text = "+5% Max HP per Level"
text = "MHP
LVL 0
+0%"
script = ExtResource("13_ojypw")

[node name="Movement" type="Panel" parent="UI/SkillPanel/TabContainer"]
visible = false
layout_mode = 2

[node name="SPCounter" type="Label" parent="UI/SkillPanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Skill Points: 1"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_b8hfi")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("14_5x4e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 13)

[node name="EnemySpawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("22_di2is")
enemy_scenes = [ExtResource("18_rcyc4"), ExtResource("17_ie47u")]

[node name="spawnpoint1" type="Node3D" parent="EnemySpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0)

[node name="map" parent="." instance=ExtResource("24_qfglw")]
